<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="300dp"
    android:layout_height="500dp"
    android:layout_gravity="center_vertical|center_horizontal"
    android:foregroundGravity="center_horizontal"
    android:theme="@style/TransparentTheme"
    tools:context=".activities.CardDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/card_details_imageview"
            android:layout_height="200dp"
            android:layout_width="wrap_content"
            android:layout_gravity="top|center_horizontal"/>

        <FrameLayout
            android:id="@+id/titlebar_frame"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:foregroundGravity="top|right"
            android:background="@color/colorBackgroundLight"
            android:layout_marginTop="-10dp"
            android:paddingBottom="15dp"
            android:translationZ="-1dp">

            <Button
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="top|end"
                android:onClick="onClose"
                android:text="@string/close"
                android:textSize="9sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="7dp"
                    android:foregroundGravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/cost_textview"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginStart="20dp"
                        android:layout_gravity="top|start"
                        android:background="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        android:gravity="center"/>

                    <TextView
                        android:id="@+id/name_textview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:foregroundGravity="center_horizontal"
                        android:textAlignment="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                </FrameLayout>

                <TextView
                    android:id="@+id/sub_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:foregroundGravity="center_horizontal"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryDark"
                    android:textStyle="italic" />

            </LinearLayout>

        </FrameLayout>

        <ScrollView
            android:id="@+id/desc_scrollview"
            android:layout_width="match_parent"
            android:layout_height="100dp">
            <TextView
                android:id="@+id/desc_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:scrollbars="vertical"
                android:textColor="@color/textLight"
                android:enabled="false"
                android:background="@android:color/transparent"/>
        </ScrollView>

        <LinearLayout
            android:id="@+id/counter_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorBackgroundLight">
            
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decrement"
                android:layout_margin="2dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:onClick="onDecrement"/>

            <TextView
                android:id="@+id/card_count_textview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_weight="1"
                android:foregroundGravity="center"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:text="@string/increment"
                android:foregroundGravity="center"
                android:gravity="center"
                android:textSize="20sp"
                android:onClick="onIncrement"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/selectcard_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:background="@color/colorBackgroundDark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cardselecthint"
                android:textStyle="bold"
                android:textAlignment="center"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/select1button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cardselect1"
                    android:layout_margin="2dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:onClick="onSelectCard"/>

                <Button
                    android:id="@+id/select2button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cardselect2"
                    android:layout_margin="2dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:onClick="onSelectCard"/>

                <Button
                    android:id="@+id/select3button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cardselect3"
                    android:layout_margin="2dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:textSize="28sp"
                    android:onClick="onSelectCard"/>

            </LinearLayout>
    </LinearLayout>

    </LinearLayout>

</FrameLayout>